<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">module-recharge</string>
    <string name="txt_not_support">暂不支持</string>
    <string name="pls_choose_recharge_type">请选择充值类型</string>
    <string name="txt_recharge_range">充值金额区间 %1$s~%2$s </string>
    <string name="txt_deposit_fee">加送%1$s%%</string>
    <string name="txt_deposit_fee_most">最高加送%1$s%%</string>
    <string name="format_change_range">预计支付：%1$s%2$s</string>
    <string name="txt_rate_usdt">"参考汇率 1USDT ≈ %1$s元"</string>
    <string name="txt_rate_cnyt_cny">参考汇率 1CNYT = 1.00元</string>
    <string name="txt_rate_tog_cny">参考汇率 1TOG = 1.00元</string>
    <string name="txt_rate_eb_cny">参考汇率 1EB = 1.00元</string>
    <string name="txt_rate_gobao_cny">参考汇率 1GB = 1.00元</string>
    <string name="txt_rate_okpay_cny">参考汇率 1OKG = 1.00元</string>
    <string name="txt_rate_gopay_cny">参考汇率 1GOP = 1.00元</string>
    <string name="txt_recharge">充值</string>
    <string name="txt_feedback">反馈信息</string>
    <string name="txt_next">下一步</string>
    <string name="txt_choose_recharge_channel">请选择充值方式：</string>
    <string name="txt_is_to_open_hiwallet_wallet">是否打开HiWallet钱包</string>
    <string name="txt_is_to_open_hiwallet_title">即将进入嗨钱包页面</string>
    <string name="txt_is_to_open_hiwallet_content">尚未注册，请注册后进行登录\n已经有嗨钱包账号，点击返回按钮后，进行登录\n登录后，即可体验嗨钱包的功能</string>
    <string name="txt_pls_select_payment_card">请选择付款银行卡</string>
    <string name="txt_pls_enter_ur_real_name">请输入支付账户真实姓名</string>
    <string name="txt_cur_recharge_channel">当前充值方式：</string>
    <string name="txt_bind_personal_info">请先绑定个人信息</string>
    <string name="txt_bind_phone">立刻绑定手机</string>
    <string name="txt_bind_bank_card">立刻绑定银行卡</string>
    <string name="txt_deposit_name">存款人姓名</string>
    <string name="txt_enter_real_name_pls">请如实填写支付账户中文姓名，并保证与提款所使用的银行卡姓名相同，否则无法保证您的正常提款！</string>
    <string name="txt_enter_recharge_amount">请输入充值金额，最低%1$s元，最高%2$s元</string>
    <string name="txt_choose_recharge_amount">请选择金额</string>
    <string name="txt_enter_correct_amount">请输入范围%1$s~%2$s内的金额！</string>
    <string name="txt_ref_exchange_rate">参考汇率：</string>
    <string name="txt_real_recharge_amount">实际存款金额：</string>
    <string name="txt_amount_filled_should_same_as_remittance_amount">*平台填写金额应当与汇款金额完全一致，否则将无法及时到账！</string>
    <string name="txt_rc_channel_low_rate_hint"><![CDATA[当前渠道<font color=#4B4B4B>【%1$s】</font>充值到账成功率较低，为了保证快速到账，请使用以下渠道进行充值或联系客服进行处理！]]></string>
    <string name="txt_close_dialog_continue_cur">关闭弹窗，继续使用当前充值渠道</string>
    <string name="txt_rc_count_low_rate_hint"><![CDATA[您已经连续充值<font color=#4B4B4B>%1$d</font>次，为了保证快速到账，请使用以下渠道进行充值或联系客服进行处理！]]></string>
    <string name="txt_rc_order_not_received_contact_pls">有订单还未到账，为了您的充值能快速到账，请您进行反馈！</string>

    <!--反馈录入页面录入提示语言-->
    <string name="txt_tip_select_un_order">* 未到账订单选择：</string>
    <string name="txt_tip_select_un_order_right">请选择未到账订单 </string>
    <string name="txt_tip_select_pay">* 付款方式：</string>
    <string name="txt_tip_select_pay_wechat">银行卡/微信/支付宝</string>
    <string name="txt_tip_select_pay_usdt">虚拟货币</string>
    <string name="txt_tip_select_pay_bottom">选择付款方式</string>
    <string name="txt_tip_input_wechat_bank_name">请输入付款银行</string>
    <string name="txt_tip_input_wechat_pay">请输入付款账号号码或者支付账号名称</string>
    <string name="txt_tip_input_wechat_pay_name">请输入付款人姓名</string>
    <string name="txt_tip_input_wechat_payee_name">请输入收款人姓名</string>
    <string name="txt_tip_input_wechat_save_numb">请输入存款金额</string>
    <string name="txt_tip_input_three_numb">请输入第三方订单号</string>
    <string name="txt_tip_input_pay_wechat_name">例: 张三</string>
    <string name="txt_tip_input_collection_wechat_name">例: 李四</string>
    <string name="txt_tip_input_wechat_save_number">例: 5000</string>
    <string name="txt_tip_input_image">请上传汇款成功截图，图片支持PNG,JPG,JPEG格式</string>

    <string name="txt_tip_input_wechat_payment_account">* 付款账户：</string>
    <string name="txt_tip_input_wechat_payment_name">* 付款人姓名：</string>
    <string name="txt_tip_input_wechat_collection_name">* 收款人姓名：</string>
    <string name="txt_tip_input_wechat_payment_numb">* 存款金额：</string>
    <string name="txt_tip_input_wechat_payment_time">* 存款准确时间：</string>
    <string name="txt_tip_input_wechat_three_numb">* 第三方订单号：</string>
    <string name="txt_tip_input_wechat_three_numb_err">第三方订单号不能为空</string>
    <string name="txt_tip_input_wechat_pay_way">* 支付渠道：</string>
    <string name="txt_tip_input_wechat_select_pay_way">请选择支付渠道</string>
    <string name="txt_tip_input_wechat_pay_way_err">*支付渠道不能为空</string>

    <string name="txt_tip_input_usdt_payment_account">* 付款钱包地址：</string>
    <string name="txt_tip_input_usdt_selector_payment_account">请输入付款钱包地址</string>
    <string name="txt_tip_input_usdt_payment_name">* 协议：</string>
    <string name="txt_tip_input_usdt_payment_agreement">请选择协议</string>
    <string name="txt_tip_input_usdt_numb">* 虚拟币数量：</string>
    <string name="txt_tip_input_usdt_numb_error">*虚拟币数量不能为空</string>
    <string name="txt_tip_input_usdt_numb_error_tip">*请输入正确的数量</string>
    <string name="txt_tip_input_usdt_add">* 收款钱包地址：</string>
    <string name="txt_tip_input_usdt_add_hint">请输入收款钱包地址</string>
    <!--反馈录入页面录入异常提示语言 微信支付宝-->
    <string name="txt_tip_input_wechat_pay_err">付款账户不能为空</string>
    <string name="txt_tip_input_pay_wechat_name_err">付款人姓名不能为空</string>
    <string name="txt_tip_input_pay_wechat_name_err_tip">请输入正确的付款人姓名 , 例如:张三</string>
    <string name="txt_tip_input_collection_wechat_name_err">收款人姓名不能为空</string>
    <string name="txt_tip_input_collection_wechat_name_err_tip">请输入正确的收款人姓名 , 例如:李四</string>
    <string name="txt_tip_input_wechat_save_number_err">存款金额不能为空</string>
    <string name="txt_tip_input_wechat_save_number_err_tip">请输入正确的存款金额 , 例如：5000.00</string>
    <string name="txt_tip_input_wechat_other_order_err">第三方订单号不能为空</string>
    <!--反馈录入页面录入异常提示语言 虚拟币-->
    <string name="txt_tip_input_usdt_pay_err">付款钱包地址不能为空</string>
    <string name="txt_tip_input_usdt_save_number_time_err">存款时间不能为空</string>
    <string name="txt_tip_input_usdt_collection_name_err">收款钱包地址不能为空</string>
    <string name="txt_tip_input_usdt_add_err">收款钱包地址不能为空</string>

    <string name="txt_rc_question">遇到问题</string>
    <string name="txt_rc_succ">充值成功</string>
    <string name="txt_minutes">分钟</string>
    <string name="txt_rc_submit_succ_pay_in_minutes_pls">充值申请提交成功\n请在%1$s之内完成支付</string>
    <string name="txt_rc_show_pay_dialog">弹出支付窗口</string>
    <string name="txt_notice_c">注意事项：</string>
    <string name="txt_notice_important_c">重要提示：</string>
    <string name="txt_rc_browser_continue">如果您的浏览器提示充值跳转页面存在未经证实信息网站或非法网站等类似信息，请您不要关闭页面，忽略警告，放心点击继续访问。</string>
    <string name="txt_rc_dont_save_account_or_qrcode">请不要保留收款账号或二维码进行重复充值，否则可能造成充值失败，感谢您的配合。</string>
    <string name="txt_rc_wait_long_or_orders_not_processed_contact_cs">高峰期若充值订单处理时间过长或多个订单未处理，请联系客服为您手动处理充值订单。</string>
    <string name="txt_rc_is_succ">是否充值成功？若充值未成功，请点击遇到问题，重新选择渠道进行充值！</string>

    <string name="txt_rc_1k_copy_card">一键复制银行卡所有信息</string>
    <string name="txt_rc_only_bank_card">仅支持银行卡转账，其它充值方式将无法到账。</string>
    <string name="txt_rc_only_x_card">仅支持%1$s转账，其它充值方式将无法到账。</string>
    <string name="txt_rc_kw_recharge">充值</string>
    <string name="txt_rc_only_bank_card_no_others">本充值方式仅支持银行卡转账，其它充值方式将无法到账。</string>
    <string name="txt_rc_order_amount_and_transfer_should_same">“订单金额”与网银转账金额不符，将无法到账。</string>
    <string name="txt_login_online_banking_transfer">登录网银，点击“转账汇款”，输入上方收款信息。</string>
    <string name="txt_to_bank_name">银行名称：</string>
    <string name="txt_to_bank_name_detail">银行地区/支行：</string>
    <string name="txt_bank_acct_name">收款账户名：</string>
    <string name="txt_bank_acct_card">收款账号：</string>
    <string name="txt_bank_rc_amount">充值金额：</string>
    <string name="txt_to_bank_card">收款银行卡</string>
    <string name="txt_transfer_no_card">转账找不到银行卡？</string>
    <string name="txt_click_to_guide">点击参考指引</string>
    <string name="txt_rc_online_rc_yuan">在线充值：</string>
    <string name="txt_rc_rate">汇率：</string>
    <string name="txt_rc_help">充值帮助</string>
    <string name="txt_rc_already_pay">我已充值</string>
    <string name="txt_rc_trans_usdt_demo">转账钱包示意图如下：</string>
    <string name="txt_rc_fee_amount">手续费金额</string>
    <string name="txt_rc_received_amount">到账金额</string>
    <string name="txt_rc_usdt_tip">进行USDT转账时请注意 手续费金额 及 到账金额，到账金额 必须与充值USDT个数一致，否则可能造成充值失败，感谢您的配合。</string>
    <string name="txt_rc_no_alipay_wechat">本渠道不支持支付宝、微信转账。</string>
    <string name="txt_rc_tip_usdt_1">1、当前汇率仅供参考，实际到账金额以到账时的汇率时汇率进行计算</string>
    <string name="txt_rc_tip_usdt_2">2、请不要向转账地址充值任何非 %1$s 资产，否则资产将可能无法找回</string>
    <string name="txt_rc_tip_ebpay_1">1、请仔细核对充值地址进行确认</string>
    <string name="txt_rc_tip_ebpay_2">2、请确保ebpay账户有足够金额进行充值</string>
    <string name="txt_ecny">数字人民币</string>
    <string name="txt_bank_card">银行卡</string>
    <string name="txt_rc_tip_yhk_1">1、为了保证您正常提款,请您在使用 %1$s 充值时务必使用绑定银行卡或与绑定银行卡姓名相同的卡进行充值,否则将无法正常提款</string>
    <string name="txt_rc_tip_yhk_2">2、为了您的资金安全，降低被银行冻卡风险，当充值金额为整数时（10，20，300）时，实际充值金额会在该整数的基础上随机增加尾数金额</string>
    <string name="txt_rc_tip_yhk_3">部分银行暂不支持数字人民币手机充值，推荐使用微信、支付宝或者建行、招行充值</string>
    <string name="txt_rc_tip_yhk_2a">2、本通道只接受线上网银转账及手机银行转账。 %1$s 不接受支付宝、微信转账、财付通、ATM、临柜等其他方式，使用以上方式可能会导致无法到账或者到账延迟。</string>
    <string name="txt_rc_tip_alipay_wechat">请按照充值页提示操作，否则将可能造成充值延迟到账或到账失败的情况</string>
    <string name="txt_rc_bind_personal_info">请先绑定个人信息</string>
    <string name="txt_rc_bind_phone_now">立即绑定手机号</string>
    <string name="txt_rc_bind_bank_card_now">立即绑定银行卡</string>
    <string name="txt_rc_bind_phone_email_pls">您没有绑定手机或邮箱，请先绑定</string>
    <string name="txt_rc_bind_phone_pls">您没有绑定手机，请先绑定</string>
    <string name="txt_rc_bind_phone">绑定手机</string>
    <string name="txt_rc_bind_email">绑定邮箱</string>
    <string name="txt_rc_bind_bank_card_pls">您没有绑定银行卡，请先绑定银行卡</string>
    <string name="txt_rc_bind_alipay_pls">请先绑定您的支付宝账号</string>
    <string name="txt_rc_bind_wechat_pls">请先绑定您的微信账号</string>
    <!--反馈页面提示-->
    <string name="txt_feedback_upload_image">请上传充值明细截图</string>
</resources>
