<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clr_transparent">

    <ImageView
        android:id="@+id/ivw_bg_top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        android:src="@mipmap/bg_google_auth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivw_bg_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-2dp"
        android:scaleType="fitStart"
        android:src="@color/clr_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivw_bg_top" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivw_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@mipmap/bg_dlg_top"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvw_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/clr_white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="标题" />

        <ImageView
            android:id="@+id/ivw_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/layout_margin"
            android:contentDescription="close"
            android:padding="4dp"
            android:src="@mipmap/ic_pop_close3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivw_cs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:contentDescription="close"
            android:padding="4dp"
            android:src="@mipmap/cm_ic_cs3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivw_close"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/tvw_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="48sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="1000.00" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/layout_margin"
                    android:layout_marginBottom="12dp"
                    android:text="@string/txt_yuan"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tvw_money" />

                <TextView
                    android:id="@+id/tvw_copy_money"
                    style="@style/style_rc_dlg_copy"
                    android:layout_marginEnd="12dp"
                    android:text="@string/txt_copy"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvw_tip_channel"
                style="@style/style_cm_tip_small_yellow2"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/txt_rc_only_bank_card" />

            <View style="@style/style_dlg_info_dividing" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/cm_ic_hourglass" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="4dp"
                    android:src="@color/clr_div_line" />

                <TextView
                    android:id="@+id/tvw_max_expire_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawablePadding="12dp"
                    android:text="@string/txt_rc_submit_succ_pay_in_minutes_pls"
                    android:textColor="@color/black" />
            </LinearLayout>

            <View style="@style/style_dlg_info_dividing" />

            <LinearLayout
                style="@style/style_rc_dlg_ll"
                android:layout_marginTop="@dimen/layout_margin"
                android:visibility="gone"
                tools:visibility="gone">

                <TextView
                    style="@style/style_rc_dlg_key"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/txt_to_bank_card" />

                <TextView
                    style="@style/style_cm_tip_small_grey"
                    android:layout_gravity="end"
                    android:layout_margin="0dp"
                    android:text="@string/txt_transfer_no_card" />

                <TextView
                    android:id="@+id/tvw_to_help"
                    style="@style/style_cm_tip_small_grey"
                    android:layout_gravity="end"
                    android:layout_marginStart="0dp"
                    android:text="@string/txt_click_to_guide"
                    android:textColor="@color/clr_blue_03" />
            </LinearLayout>

            <LinearLayout
                style="@style/style_rc_dlg_ll"
                android:layout_marginTop="@dimen/layout_margin">

                <TextView
                    style="@style/style_rc_dlg_key"
                    android:text="@string/txt_to_bank_name" />

                <TextView
                    android:id="@+id/tvw_to_bank_name"
                    style="@style/style_rc_dlg_value"
                    tools:text="XXX" />

                <TextView
                    android:id="@+id/tvw_copy_bank_name"
                    style="@style/style_rc_dlg_copy"
                    android:text="@string/txt_copy" />
            </LinearLayout>

            <LinearLayout style="@style/style_rc_dlg_ll">

                <TextView
                    style="@style/style_rc_dlg_key"
                    android:text="@string/txt_to_bank_name_detail" />

                <TextView
                    android:id="@+id/tvw_to_bank_name_detail"
                    style="@style/style_rc_dlg_value"
                    tools:text="XXX" />

                <TextView
                    android:id="@+id/tvw_copy_branch"
                    style="@style/style_rc_dlg_copy"
                    android:text="@string/txt_copy" />
            </LinearLayout>

            <LinearLayout style="@style/style_rc_dlg_ll">

                <TextView
                    style="@style/style_rc_dlg_key"
                    android:text="@string/txt_bank_acct_name" />

                <TextView
                    android:id="@+id/tvw_bank_acct_name"
                    style="@style/style_rc_dlg_value"
                    tools:text="XXX" />

                <TextView
                    android:id="@+id/tvw_copy_acc_name"
                    style="@style/style_rc_dlg_copy"
                    android:text="@string/txt_copy" />
            </LinearLayout>

            <LinearLayout style="@style/style_rc_dlg_ll">

                <TextView
                    style="@style/style_rc_dlg_key"
                    android:text="@string/txt_bank_acct_card" />

                <TextView
                    android:id="@+id/tvw_bank_acct_card"
                    style="@style/style_rc_dlg_value"
                    tools:text="XXX" />

                <TextView
                    android:id="@+id/tvw_copy_acc_num"
                    style="@style/style_rc_dlg_copy"
                    android:text="@string/txt_copy" />
            </LinearLayout>

            <LinearLayout style="@style/style_rc_dlg_ll">

                <TextView
                    style="@style/style_rc_dlg_key"
                    android:text="@string/txt_bank_rc_amount" />

                <TextView
                    android:id="@+id/tvw_money2"
                    style="@style/style_rc_dlg_value"
                    tools:text="XXX" />

                <TextView
                    android:id="@+id/tvw_copy_money2"
                    style="@style/style_rc_dlg_copy"
                    android:text="@string/txt_copy" />
            </LinearLayout>

            <!--<TextView
                android:id="@+id/tvw_ok"
                style="@style/style_btn_long"
                android:text="@string/txt_rc_1k_copy_card" />-->
            <TextView
                android:id="@+id/tvw_ok"
                style="@style/style_btn_long"
                android:text="@string/txt_rc_already_pay" />

            <TextView
                style="@style/style_cm_tip_small_grey"
                android:layout_marginTop="36dp"
                android:drawableStart="@mipmap/cm_ic_hint_purple"
                android:drawablePadding="4dp"
                android:text="@string/txt_notice_c"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvw_01"
                style="@style/style_cm_tip_small_yellow"
                android:text="@string/txt_rc_only_bank_card_no_others"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvw_02"
                style="@style/style_cm_tip_small_yellow"
                android:text="@string/txt_rc_dont_save_account_or_qrcode" />

            <TextView
                android:id="@+id/tvw_03"
                style="@style/style_cm_tip_small_grey"
                android:text="@string/txt_rc_wait_long_or_orders_not_processed_contact_cs" />

            <TextView
                android:id="@+id/tvw_04"
                style="@style/style_cm_tip_small_grey"
                android:text="@string/txt_rc_order_amount_and_transfer_should_same" />

            <TextView
                android:id="@+id/tvw_05"
                style="@style/style_cm_tip_small_grey"
                android:text="@string/txt_login_online_banking_transfer" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>